# uruquai

./: .gitignore  README.md  README_quantum_exp.md  data_catalog_QA_notebook.ipynb  data_catalog_v1.1.csv  quantum_exp.ipynb  quantum_sensor_toy.ipynb
manzanillo-qc/: .gitignore  README.md  pyproject.toml  requirements-photonic-legacy.txt  requirements.txt  run_dqi.py
manzanillo-qc/examples/: config_small.yaml
manzanillo-qc/photonic/: README.md  cv_qaoa.py  requirements.txt
manzanillo-qc/src/manzanillo_qc/: __init__.py  anneal.py  backends.py  benchmarks.py  cli.py  config.py  dqi.py  instance.py  ising.py  pasqal_qubo.py  pulser_qaoa.py  qaoa.py  qaoa_jax.py  qubo.py  rqaoa.py  scaling.py  utility.py
