[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manzanillo-qc"
version = "0.1.0"
description = "Quantum sensor placement optimisation for the Manzanillo seismic network"
requires-python = ">=3.10"
dependencies = [
    "pennylane>=0.36",
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "requests>=2.28",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "ortools>=9.5",
]

[project.scripts]
manzanillo-qc = "manzanillo_qc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
